--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="piashsotware.ltd.movietune.SplashAcitivity">
 
-    <TextView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        app:tabTextColor="@android:color/white"
+        android:background="@color/colorPrimary"
+        android:layout_height="35dp"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabIndicatorColor="@color/colorAccent"
+        app:tabMode="scrollable"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Main Acitiviy" />
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:background="@drawable/background_image" >
+    </android.support.v4.view.ViewPager>
+</LinearLayout>
