--- a/app/src/main/res/layout/layout_movie_adapter.xml
+++ b/app/src/main/res/layout/layout_movie_adapter.xml
@@ -3,14 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textViewName"
-        android:text="Testing for RV"/>
-
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/imageViewForMovie"/>
 </LinearLayout>
