--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,10 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         app:tabTextColor="@android:color/white"
-        android:background="@color/colorPrimary"
+        android:background="#009583"
         android:layout_height="35dp"
         app:tabSelectedTextColor="@android:color/white"
-        app:tabIndicatorColor="@color/colorAccent"
-        app:tabMode="scrollable"/>
+        app:tabIndicatorColor="@android:color/white" />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="wrap_content"
