--- a/app/src/main/res/layout/layout_movie_adapter.xml
+++ b/app/src/main/res/layout/layout_movie_adapter.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:layout_margin="16dp"
         android:id="@+id/imageViewForMovie"/>
 </LinearLayout>
