--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="piashsotware.ltd.movietune.MovieFragment">
+    tools:context="piashsotware.ltd.movietune.fragment.MovieFragment">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
