Add DataModel For MovieDetailFragment (detailpage)

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/background_image"
     tools:context="piashsotware.ltd.movietune.fragment.MovieDetailFragment">
 
     <RelativeLayout
@@ -12,7 +14,7 @@
             android:layout_height="250dp"
             android:id="@+id/detailImage"
             android:scaleType="centerCrop"
-            android:src="@drawable/background_image"/>
+            android:src="@drawable/splash_screen"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,34 +25,81 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_gravity="left">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Hello world"
+                    android:text="Inception"
+                    android:textSize="35sp"
                     android:textColor="@android:color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:layout_gravity="right"
+                android:layout_marginLeft="70dp"
                 android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/circle"/>
 
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/poligon"/>
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/circle"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="41"
+                        android:textSize="25sp"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:id="@+id/imagepoligon"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/poligon"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="8.7"
+                        android:textSize="25sp"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+
+
+
             </LinearLayout>
 
 
         </LinearLayout>
     </RelativeLayout>
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="goog"
+    android:textColor="@android:color/white"
+    android:textSize="18sp"
+    android:layout_marginTop="16dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@android:color/white"
+        android:layout_marginTop="16dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/similarMovie">
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
