--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,6 @@
     <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="textAllCaps">false</item>
+        <item name="textAllCaps">true</item>
     </style>
 </resources>
