--- a/app/src/main/res/layout/layout_movie_adapter.xml
+++ b/app/src/main/res/layout/layout_movie_adapter.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
     <ImageView
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:layout_margin="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:id="@+id/imageViewForMovie"/>
 </LinearLayout>
